# tinyserve

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/core/config/: aliases.rs  default.rs  mod.rs
