[package]
name = "tinyserve"
version = "0.1.0"
edition = "2024"
authors = ["keys-i <70819367+keys-i@users.noreply.github.com>"]
license-file = "LICENSE"
description = "Superfast, ultra-lightweight Rust HTTP static file server for local dev, previews, and LAN sharing. Serves any file type (bytes) with correct MIME so clients can render/stream formats like HTML, images, PDF, MP3, MP4, and more. Single binary, zero-config defaults."
readme = "README.md"
homepage = "https://github.com/yourname/tinyserve"
repository = "https://github.com/yourname/tinyserve"
documentation = "https://docs.rs/tinyserve"
default-run = "tinyserve"
keywords = ["http-server", "file-server", "static-files", "dev-server", "cli"]
categories = [
  "web-programming::http-server",
  "command-line-utilities",
  "network-programming",
  "web-programming",
]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*", "CHANGELOG.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "tinyserve"
path = "src/main.rs"

[profile.dev]
opt-level = 1
debug = 2
strip = "none"
panic = "unwind"
incremental = true
codegen-units = 256
lto = "off"
debug-assertions = true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 2
debug = 1


[profile.release]
opt-level = 3
debug = 0
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"
incremental = false


[dependencies]
